openmediavault (0.3.0.15) stable; urgency=low

  * Update locales.
  * Mantis 0000507: Allow setting multiple secondary DNS servers. The input
    field in the WebGUI accept a list of comma-seperated IP addresses.
  * Mantis 0000510: Timestamps on system logs are displayed incorrectly on
    web interface for non-DST time zones.
  * Mantis 0000521: Replace php5-auth-pam with php5-pam package because it
    has been dropped in Debian Wheezy.
  * Mantis 0000522: Improve DNS Service Discovery management.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 15 Jun 2012 22:26:24 +0200

openmediavault (0.3.0.14) stable; urgency=low

  * Update locales.
  * Mantis 0000387: Cannot delete NFS-Share. Please delete all existing
    NFS shares and recreate them, it is not possible to recover them
    automatically.
  * Mantis 0000510: Timestamps on system logs are displayed incorrectly on
    web interface for non-DST time zones.
  * Mantis 0000514: cron-apt email FROM is wrong.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 12 Jun 2012 09:39:11 +0200

openmediavault (0.3.0.13) stable; urgency=low

  * Update locales.
  * Mantis 0000497: Various errors after last update to shared folders.
  * Mantis 0000501: Permanent mount error for the FTP folders.
  * Mantis 0000503: Volume groups containing the character '-' are not
    processed correctly in association with logical volumes.
  * Mantis 0000504: Domain field doesn't allow domains beginning with a
    number.
  * Mantis 0000512: Improve FileSystemMgmt::mount and FileSystemMgmt::umount
    RPC's to simply mount/umount a filesystem without create/delete fstab
    entries.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 09 Jun 2012 01:16:46 +0200

openmediavault (0.3.0.12) stable; urgency=low

  * Flush mailq once a day if email notification service is disabled.
  * Fix bug in Apt::getUpgraded RPC.
  * Send hostname to DHCP server.
  * Mantis 0000488: Display icon in "Enabled" columns.